--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,7 +31,7 @@ github_username:  nemessisc
 #theme: jekyll-theme-slate
 #plugins:
 # - jekyll-feed
-remote_theme: pages-themes/slate@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
