--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,15 +20,13 @@
 
 title: Nemesis Contreras
 #email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Senior Application Security Engineer
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: nemesis_pkg
-github_username:  nemessisc
+description: Senior Application Security Engineer
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "" # the base hostname & protocol for your site, e.g. http://example.com
+#twitter_username: nemesis_pkg
+#github_username:  nemessisc
 
 # Build settings
-#theme: jekyll-theme-slate
 #plugins:
 # - jekyll-feed
 remote_theme: pages-themes/cayman@v0.2.0
