--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Nemesis Contreras
-#email: your-email@example.com
 description: Senior Application Security Engineer
-#baseurl: "" # the subpath of your site, e.g. /blog
-#url: "" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: nemesis_pkg
-#github_username:  nemessisc
+
+#Socials
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://espresso-sec.com" # the base hostname 
+linkedin_url: "https://www.linkedin.com/in/nemesis-c-a6514815b/"
+blog_url: "/blog"  # or full URL if hosted elsewhere
+twitter_url: "https://twitter.com/iznemesis"
 
 # Build settings
 #plugins:
